# QDArchive

./: .gitattributes  .gitignore  23688981-sq26-classification.db  23688981-sq26.db  README.md  main.py  pyproject.toml
docs/: aggregation.md  classification.md  database_links.md  filtering.md
scripts/: aggregate.sh  classify.sh  classify_taxonomy.sh  export_projects_summary.sh  fix_repository_ids.sh  list_qda_files.sh  migrate_schema.sh  plot_project_types.sh  plot_repo_taxonomy.sh  plot_repositories.sh  plot_taxonomy_classes.sh  run.sh  sync_report.sh
src/: database.py  db.py  harvard_api.py  ihsn_api.py  ingestor.py  main.py
src/models/: download_result.py  person_role.py  query_terms.py
src/phase1_acquisition/: database.py
src/phase1_acquisition/tests/: Interview A.docx  lib.py
src/phase2_classification/aggregation/: aggregate.py  clean_data.py  mapping.py  merge.py  migrate_schema.py  schema.py
src/phase2_classification/classification/: classify.py  list_qda_files.py  qda_file_extensions.json  rules.py
src/phase2_classification/classification/output/: qda_files.csv
src/phase2_classification/data_analysis/: charts.py  export_projects_summary.py  fix_repository_ids.py  generate_latex_report.py  plot_project_types.py  plot_repo_taxonomy.py  plot_repositories.py  plot_taxonomy_classes.py  repository_labels.py
src/phase2_classification/data_analysis/output/by_repository/ada/: comments.md  file_primary_class_table.csv  (+2 more)
src/phase2_classification/taxonomy/: classify_taxonomy.py  isic_rev5.json  reference.py
tests/: ihsn.py  main.py
(+63 files in other folders)
